# auth

./: docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py
app/routers/: auth.py  oauth.py
