[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose[cryptgraphy]>=3.5.0",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
]

[tool.uv]
package = false
